# konqinfohelper

./: ChangeLog
servicemenus/: CMakeLists.txt
